--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -5,5 +5,5 @@ sql:
     schema: "db/migrations"
     gen:
       go:
-        package: "queries"
-        out: "internal/queries"
+        package: "sqlc"
+        out: "internal/db/sqlc"
